--- a/unit-tests-in-bitrix-context-part-1/index.html
+++ b/unit-tests-in-bitrix-context-part-1/index.html
@@ -189,7 +189,7 @@
   <ul class="socialcount socialcount-small inline-list">
     <li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=http://osotov.github.io/unit-tests-in-bitrix-context-part-1/" title="Share on Facebook"><span class="count"><i class="fa fa-facebook-square"></i> Like</span></a></li>
     <li class="twitter"><a href="https://twitter.com/intent/tweet?text=http://osotov.github.io/unit-tests-in-bitrix-context-part-1/" title="Share on Twitter"><span class="count"><i class="fa fa-twitter-square"></i> Tweet</span></a></li>
-    <li class="googleplus"><a href="https://plus.google.com/share?url=http://osotov.github.io/unit-tests-in-bitrix-context-part-1/" title="Share on Google Plus"><span class="count"><i class="fa fa-google-plus-square"></i> +1</span></a></li>
+    <li class="vk"><a href="http://vk.com/share.php?url=http://osotov.github.io/unit-tests-in-bitrix-context-part-1/" title="Share on VK"><span class="count"><i class="fa fa-vk"></i> Share</span></a></li>
   </ul>
 </div><!-- /.social-share -->
       </footer>
