--- a/unit-tests-in-bitrix-context-part-1/index.html
+++ b/unit-tests-in-bitrix-context-part-1/index.html
@@ -201,11 +201,16 @@
       <a href="http://osotov.github.io/first-post/" class="read-more-btn">Статьи</a>
     </div><!-- /.read-more-header -->
     <div class="read-more-content">
-      <h3><a href="http://osotov.github.io/unit-tests-in-bitrix-context-part-2/" title="Юнит-тестирование и Битрикс. Часть 2.">Юнит-тестирование и Битрикс. Часть 2.</a></h3>
-      <p>Мое мнение о модульном тестировании. В частности, в случае разработки на платформе 1С-Битрикс. Часть 2. <a href="http://osotov.github.io/unit-tests-in-bitrix-context-part-2/">Читать дальше</a></p>
+      <h3><a href="http://osotov.github.io/podcasts/" title="Подкасты">Подкасты</a></h3>
+      <p>Подкасты или еще один способ узнать что-то новое <a href="http://osotov.github.io/podcasts/">Читать дальше</a></p>
     </div><!-- /.read-more-content -->
   
   <div class="read-more-list">
+    
+      <div class="list-item">
+        <h4><a href="http://osotov.github.io/unit-tests-in-bitrix-context-part-2/" title="Юнит-тестирование и Битрикс. Часть 2.">Юнит-тестирование и Битрикс. Часть 2.</a></h4>
+        <span>Опубликовано 16.09.2015</span>
+      </div><!-- /.list-item -->
     
       <div class="list-item">
         <h4><a href="http://osotov.github.io/first-post/" title="Первый пост">Первый пост</a></h4>
