--- a/podcasts/index.html
+++ b/podcasts/index.html
@@ -19,6 +19,9 @@
 <meta property="og:url" content="http://osotov.github.io/podcasts/">
 <meta property="og:site_name" content="osotov">
 
+    <meta property="og:image" content="http://osotov.github.io/images/phproundtable.jpeg" />
+
+
 
 
 
