--- a/podcasts/index.html
+++ b/podcasts/index.html
@@ -19,7 +19,7 @@
 <meta property="og:url" content="http://osotov.github.io/podcasts/">
 <meta property="og:site_name" content="osotov">
 
-    <meta property="og:image" content="http://osotov.github.io/images/phproundtable.jpeg" />
+    <meta property="og:image" content="http://osotov.github.io/images/podcasts_og.png" />
 
 
 
