new podcasts vk image

--- a/podcasts/index.html
+++ b/podcasts/index.html
@@ -20,6 +20,7 @@
 <meta property="og:site_name" content="osotov">
 
     <meta property="og:image" content="http://osotov.github.io/images/podcasts_og.png" />
+    <link rel="image_src" href="http://osotov.github.io/images/podcasts_og.png"/>
 
 
 
