--- a/pdf-generation_with-phantomjs/index.html
+++ b/pdf-generation_with-phantomjs/index.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="utf-8">
 <title>Генерация pdf-файлов с помощью PhantomJS &#8211; osotov</title>
-<meta name="description" content="Подкасты или еще один способ узнать что-то новое">
+<meta name="description" content="Интересный подход к реализации генерации pdf-документов">
 <meta name="keywords" content="php, bitrix, phantomjs">
 
 
@@ -15,7 +15,7 @@
 <meta property="og:locale" content="ru_RU">
 <meta property="og:type" content="article">
 <meta property="og:title" content="Генерация pdf-файлов с помощью PhantomJS">
-<meta property="og:description" content="Подкасты или еще один способ узнать что-то новое">
+<meta property="og:description" content="Интересный подход к реализации генерации pdf-документов">
 <meta property="og:url" content="http://osotov.github.io/pdf-generation_with-phantomjs/">
 <meta property="og:site_name" content="osotov">
 
