--- a/podcasts/index.html
+++ b/podcasts/index.html
@@ -229,7 +229,7 @@
     </div><!-- /.read-more-header -->
     <div class="read-more-content">
       <h3><a href="http://osotov.github.io/pdf-generation_with-phantomjs/" title="Генерация pdf-файлов с помощью PhantomJS">Генерация pdf-файлов с помощью PhantomJS</a></h3>
-      <p>Подкасты или еще один способ узнать что-то новое <a href="http://osotov.github.io/pdf-generation_with-phantomjs/">Читать дальше</a></p>
+      <p>Интересный подход к реализации генерации pdf-документов <a href="http://osotov.github.io/pdf-generation_with-phantomjs/">Читать дальше</a></p>
     </div><!-- /.read-more-content -->
   
   <div class="read-more-list">
