refactoring to collections post fixed typo

--- a/refactoring-to-collections/index.html
+++ b/refactoring-to-collections/index.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="utf-8">
 <title>Refactoring to collections или как заменить foreach коллекциями &#8211; osotov</title>
-<meta name="description" content="Этот пост будет целиком и полностью посвящен книге Refactoring to collections написанной Adam Wathan.">
+<meta name="description" content="Этот пост будет целиком и полностью посвящен книге «Refactoring to collections», написанной Adam Wathan.">
 <meta name="keywords" content="php, books">
 
 
@@ -15,7 +15,7 @@
 <meta property="og:locale" content="ru_RU">
 <meta property="og:type" content="article">
 <meta property="og:title" content="Refactoring to collections или как заменить foreach коллекциями">
-<meta property="og:description" content="Этот пост будет целиком и полностью посвящен книге Refactoring to collections написанной Adam Wathan.">
+<meta property="og:description" content="Этот пост будет целиком и полностью посвящен книге «Refactoring to collections», написанной Adam Wathan.">
 <meta property="og:url" content="/refactoring-to-collections/">
 <meta property="og:site_name" content="osotov">
 
