--- a/unit-tests-in-bitrix-context-part-1/index.html
+++ b/unit-tests-in-bitrix-context-part-1/index.html
@@ -203,7 +203,7 @@
     </div><!-- /.read-more-header -->
     <div class="read-more-content">
       <h3><a href="http://osotov.github.io/refactoring-to-collections/" title="Refactoring to collections или как заменить foreach коллекциями">Refactoring to collections или как заменить foreach коллекциями</a></h3>
-      <p>Этот пост будет целиком и полностью посвящен книге Refactoring to collections написанной Adam Wathan. <a href="http://osotov.github.io/refactoring-to-collections/">Читать дальше</a></p>
+      <p>Этот пост будет целиком и полностью посвящен книге «Refactoring to collections», написанной Adam Wathan. <a href="http://osotov.github.io/refactoring-to-collections/">Читать дальше</a></p>
     </div><!-- /.read-more-content -->
   
   <div class="read-more-list">
